--- a/admin.html
+++ b/admin.html
@@ -6,18 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin</title>
     <link rel="icon" type="image/x-icon" href="./images/GymFi.png">
-
     <link rel="stylesheet" href="style.css">
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+
+        main {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 100px);
+        }
+
+        .centered-form {
+            background-color: white;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 800px;
+        }
+
+        .centered-form h2 {
+            margin-top: 0;
+            color: #4CAF50;
+        }
+
         table {
             width: 100%;
             border-collapse: collapse;
+            table-layout: auto;
         }
 
         th,
         td {
             border: 1px solid #ddd;
             padding: 8px;
+            word-wrap: break-word;
         }
 
         th {
@@ -39,6 +76,7 @@
             border: none;
             padding: 5px 10px;
             cursor: pointer;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -46,10 +84,6 @@
 <body>
     <header>
         <h1>Admin</h1>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="login.html" onclick="handleLogout()">Log out</a>
-        </nav>
     </header>
     <main>
         <section id="user-list-section" class="centered-form">
@@ -102,11 +136,6 @@
             // Remove the row from the table
             const row = button.parentNode.parentNode;
             row.parentNode.removeChild(row);
-        }
-
-        function handleLogout() {
-            localStorage.removeItem('loggedIn');
-            window.location.href = 'login.html';
         }
     </script>
 </body>
